--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
 .square {
-  height: 100px;
-  width: 100px;
+  height: 200px;
+  width: 200px;
   border: 2px solid black;
+}
+
+.board {
+  display: flex;
+  flex-wrap: wrap;
+  width: 800px;
+  margin: 0 auto;
+
 }
