--- a/src/App.css
+++ b/src/App.css
@@ -12,5 +12,46 @@
   flex-wrap: wrap;
   width: 800px;
   margin: 0 auto;
+  justify-content: center;
 
+}
+
+.h1{
+  text-align: center;
+  text-transform: capitalize;
+  font-size: 3rem;
+}
+
+.square-rick {
+  height: 200px;
+  width: 200px;
+  background-image: url(assets/Rick-sanchez.jpg);
+  border: 2px solid black;
+  font-size: 10rem;
+  text-align: center;
+
+}
+.square-morty {
+  height: 200px;
+  width: 200px;
+  background-image: url(assets/morty.jpg);
+  border: 2px solid black;
+  font-size: 10rem;
+  text-align: center;
+
+}
+
+.background {
+  background-image: url(https://wallpapercave.com/dwp2x/wp1822732.jpg);
+  background-size: cover;
+  opacity: 0.85;
+} 
+.playagain{
+  height: 50px;
+  width: 100px;
+  background-color: silver;
+}
+.button{
+  display:flex;
+  justify-content: center;
 }
